# LinkTune

./: .cache  .gitignore  LICENCE  README.md  pyproject.toml  requirements.txt
linktune/: setup.py
linktune/api/: .cache  applemusic.py  convert.py  deezer.py  search.py  spotify.py  tidal.py  youtube.py
linktune/cli/: arguments.py  commands.py  main.py
linktune/config/: config.py
linktune/utils/: exceptions.py
linktune/web/: app.py  package-lock.json  package.json  tailwind.config.js
linktune/web/static/: index.html  styles.css
linktune/web/static/js/: index.js
linktune/web/templates/: index.html
tests/: convert_test.py  spotify_test.py  tidal_test.py
