[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "linktune"
version = "0.1.3"
authors = [{name = "fi", email = "fiona.nugent7@gmail.com"}]
description = "A package for searching and converting music links across different music streaming services."
readme = "README.md"
requires-python = ">=3.7"
license = {file = "LICENCE"}
dependencies = [
    "spotipy ~= 2.22.0",
    "tidal-unofficial ~= 0.1.0",
    "ytmusicapi ~= 0.25.0",
]

[project.urls]
"Homepage" = "https://github.com/kattums/LinkTune"
"Bug Tracker" = "https://github.com/kattums/LinkTune/issues"

[project.scripts]
linktune = "linktune.cli.main:main"